fixing scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ footer div{
     width: 100%;
     background-color: var(--lightgrey);
     border-radius: 20px 20px 0px 0px;
+    padding: 0 !important;
 }
 
 footer > div > article{
@@ -149,8 +150,11 @@ footer div article ul{
 #section1{
     display: flex;
     flex-direction: column;
-    gap: 40px;
-    padding-bottom: 60px;
+    padding-bottom: 20px;
+}
+
+#section1 > p{
+    margin-bottom: 40px;
 }
 
 #section1 h1{
@@ -164,6 +168,7 @@ footer div article ul{
 
 form{
     display: flex;
+    margin-bottom: 40px;
 }
 
 form input{
@@ -171,8 +176,8 @@ form input{
     width: 200px;
 }
 
-form div{
-    display: flex;
+form i{
+    display: flex !important;
     align-items: center;
     justify-content: center;
     width: 30px;
@@ -202,6 +207,7 @@ form button:hover{
     display: flex;
     gap: 24px;
     align-items: center;
+    padding-bottom: 40px;
 }
 
 #filter h2{
@@ -316,7 +322,7 @@ form button:hover{
 }
 
 .accomodation2 img{
-    width: 35%;
+    width: 40%;
     height: 160px;
     object-fit: cover;
     border-radius: 20px 0px 0px 20px;
@@ -402,6 +408,14 @@ form button:hover{
     padding: 10px;
 }
 
+/* ajustement responsive */
+
+@media screen and (max-width: 1128px){
+    .accomodation2 img{
+        height: 170px;
+    }
+}
+
 /* responsive tablette */
 
 @media screen and (max-width: 1024px){
@@ -453,7 +467,6 @@ form button:hover{
 
     footer div{
         flex-direction: column;
-        padding: 0 15px !important;
     }
 
     /* Section 1 */
